<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:id="@+id/view_user_stats_activity"
    tools:context=".ui.stats.ViewStatsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterSearchBar"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="364dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:placeholderText="@string/search_text"
        android:inputType="text"
        android:hint=""
        android:textSize="14sp"
        android:textColorHint="@drawable/text_box_stroke_color"
        app:hintTextColor="@drawable/text_box_stroke_color"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <AutoCompleteTextView
            android:id="@+id/filterAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:dropDownHeight="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filterChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/sortByGpaChip"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/sort_by_gpa_text"
            app:chipIconSize="20dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sortByEntranceScoreChip"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/sort_by_entrance_score_text"
            app:chipIconSize="20dp" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_card_id"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_navigation"
        style="@style/Widget.Material3.BottomNavigationView"
        app:itemIconSize="25dp"
        app:itemPaddingTop="10dp"
        app:itemPaddingBottom="5dp"
        app:labelVisibilityMode="unlabeled"
        />

</RelativeLayout>

