...
        android:id="@+id/view_stats_activity"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/view_stats" />

    <item
        android:id="@+id/sign_out_activity"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/profile" />

</menu>

