<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:id="@+id/userProfileActivity"
    tools:context=".ui.settings.UserProfileActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/coins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/coinAnimation"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="right|center_vertical"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/coin" />

            </LinearLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfileImage"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:civ_border_color="@color/grey"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toTopOf="@+id/editUserUnivInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.094"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editUserUnivInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userProfileImage"
                app:layout_constraintVertical_bias="0.203" />

            <TextView
                android:id="@+id/userEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                android:fontFamily="@font/open_sans"
                app:layout_constraintBottom_toTopOf="@+id/editUserUnivInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameText"
                app:layout_constraintVertical_bias="0.309" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editUserUnivInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:layout_marginTop="35dp"
                android:hint="@string/user_univ_text"
                android:textColorHint="@drawable/text_box_stroke_color"
                app:boxStrokeColor="@drawable/text_box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@drawable/text_box_stroke_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserUnivEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editUserMajorinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:layout_marginTop="25dp"
                android:hint="@string/user_major_text"
                android:textColorHint="@drawable/text_box_stroke_color"
                app:boxStrokeColor="@drawable/text_box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@drawable/text_box_stroke_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUserUnivInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserMajorEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editUserGpaInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:layout_marginTop="25dp"
                android:hint="@string/user_gpa_text"
                android:textColorHint="@drawable/text_box_stroke_color"
                app:boxStrokeColor="@drawable/text_box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@drawable/text_box_stroke_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUserMajorinput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserGpaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editUserEntranceScoreinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="255dp"
                android:layout_height="65dp"
                android:layout_marginTop="25dp"
                android:hint="@string/user_entrance_score_text"
                android:textColorHint="@drawable/text_box_stroke_color"
                app:boxStrokeColor="@drawable/text_box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@drawable/text_box_stroke_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUserGpaInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserEntranceScoreEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editUserBioInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="254dp"
                android:layout_height="166dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="50dp"
                android:hint="@string/univ_user_bio_input"
                android:textColorHint="@drawable/text_box_stroke_color"
                app:boxStrokeColor="@drawable/text_box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@drawable/text_box_stroke_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUserGpaInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserBioEditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="50"
                    android:minLines="2"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/edit_profile_button_text"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_done_24"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/edit_profile_button_text"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:visibility="visible" />

</RelativeLayout>